[gd_scene load_steps=16 format=3 uid="uid://dbjnv7egbmojt"]

[ext_resource type="Texture2D" uid="uid://d12y1p1qn73ff" path="res://assets/stations.webp" id="1_a7s1o"]
[ext_resource type="Texture2D" uid="uid://ooy1y8vts1b5" path="res://assets/download-removebg-preview.png" id="2_fwgpi"]
[ext_resource type="Script" path="res://scenes/drink_station/milk.gd" id="3_wtyj4"]
[ext_resource type="Texture2D" uid="uid://c8gnhm635xay6" path="res://assets/milk.png" id="4_21wc3"]
[ext_resource type="Texture2D" uid="uid://bj3pkyveuc65m" path="res://assets/liquid_station/animations/milk-animation/left_1.png" id="5_byvbw"]
[ext_resource type="Texture2D" uid="uid://bay72gropcdqv" path="res://assets/liquid_station/animations/milk-animation/left_2.png" id="6_nscbu"]
[ext_resource type="Texture2D" uid="uid://bta4ltp57uqsf" path="res://assets/liquid_station/animations/milk-animation/left_3.png" id="7_c8l71"]
[ext_resource type="Texture2D" uid="uid://bdrjrgklxsjyp" path="res://assets/liquid_station/animations/milk-animation/right_1.png" id="8_gf7pw"]
[ext_resource type="Texture2D" uid="uid://dk6r4kuqj4c6s" path="res://assets/liquid_station/animations/milk-animation/right_2.png" id="9_v21vo"]
[ext_resource type="Texture2D" uid="uid://dhe327i4mbvmg" path="res://assets/liquid_station/animations/milk-animation/right_3.png" id="10_ph5m0"]

[sub_resource type="GDScript" id="GDScript_sjqiq"]
script/source = "extends Node2D

var cupsize : String = \"\"
var small : Texture = preload(\"res://assets/small.png\")
var medium : Texture = preload(\"res://assets/med.png\")
var large : Texture = preload(\"res://assets/large.png\")
var smallTea : Texture = preload(\"res://assets/smallTea.png\")
var medTea : Texture = preload(\"res://assets/medTea.png\")
var largeTea : Texture = preload(\"res://assets/largeTea.png\")
var smallCoffee : Texture = preload(\"res://assets/smallCoffee.png\")
var medCoffee : Texture = preload(\"res://assets/medCoffee.png\")
var largeCoffee : Texture = preload(\"res://assets/largeCoffee.png\")


# Called when the node enters the scene tree for the first time.
func _ready():
	$Back.pressed.connect(self._on_back_pressed)
	$Next.pressed.connect(self._on_next_pressed)


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func _on_back_pressed():
	get_tree().change_scene_to_file(\"res://scenes/customer_line/customer_line.tscn\")


func _on_next_pressed():
	get_tree().change_scene_to_file(\"res://scenes/Toppings/Toppings.tscn\")

func _on_largecup_pressed():
	$cupsize/cup.set_texture(large)
	cupsize = \"l\"

func _on_medcup_pressed():
	$cupsize/cup.set_texture(medium)
	cupsize = \"m\"

func _on_smallcup_pressed():
	$cupsize/cup.set_texture(small)
	cupsize = \"s\"

func _on_tea_pressed():
	if ($cupsize/cup.get_texture() != null && cupsize != null):
		if(cupsize == \"s\"):
			$cupsize/cup.set_texture(smallTea)
		elif(cupsize == \"m\"):
			$cupsize/cup.set_texture(medTea)
		elif(cupsize == \"l\"):
			$cupsize/cup.set_texture(largeTea)

func _on_coffee_pressed():
	if ($cupsize/cup.get_texture() != null && cupsize != null):
		if(cupsize == \"s\"):
			$cupsize/cup.set_texture(smallCoffee)
		elif(cupsize == \"m\"):
			$cupsize/cup.set_texture(medCoffee)
		elif(cupsize == \"l\"):
			$cupsize/cup.set_texture(largeCoffee)
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_457jg"]
size = Vector2(94.3307, 160.305)

[sub_resource type="SpriteFrames" id="SpriteFrames_bxd5m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_21wc3")
}],
"loop": true,
"name": &"milk",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_byvbw")
}, {
"duration": 1.0,
"texture": ExtResource("6_nscbu")
}, {
"duration": 1.0,
"texture": ExtResource("7_c8l71")
}, {
"duration": 1.0,
"texture": ExtResource("5_byvbw")
}, {
"duration": 1.0,
"texture": ExtResource("6_nscbu")
}, {
"duration": 1.0,
"texture": ExtResource("7_c8l71")
}],
"loop": false,
"name": &"pouring_milk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_gf7pw")
}, {
"duration": 1.0,
"texture": ExtResource("9_v21vo")
}, {
"duration": 1.0,
"texture": ExtResource("10_ph5m0")
}, {
"duration": 1.0,
"texture": ExtResource("8_gf7pw")
}, {
"duration": 1.0,
"texture": ExtResource("9_v21vo")
}, {
"duration": 1.0,
"texture": ExtResource("10_ph5m0")
}],
"loop": false,
"name": &"pouring_milk_right",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_fnsfk"]
script/source = "extends StaticBody2D


# Called when the node enters the scene tree for the first time.
func _ready():
	modulate = Color(Color.MEDIUM_AQUAMARINE, 0.7)

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	#print(global_position)
	pass

func select():
	for child in get_tree().get_nodes_in_group(\"droppable\"):
		child.deselect()
	modulate = Color.BLUE

func deselect():
	modulate = Color.WHITE
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wx7pv"]
size = Vector2(113, 187.531)

[node name="make-boba" type="Node2D"]
script = SubResource("GDScript_sjqiq")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -576.0
offset_top = -321.0
offset_right = 560.0
offset_bottom = 324.0
texture = ExtResource("1_a7s1o")
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="."]
offset_left = -541.0
offset_top = 232.0
offset_right = -433.0
offset_bottom = 272.0
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="."]
offset_left = 362.0
offset_top = 238.0
offset_right = 457.0
offset_bottom = 283.0
text = "Next"
metadata/_edit_use_anchors_ = true

[node name="cupsize" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="large-cup" type="TextureButton" parent="cupsize"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = -548.0
offset_top = -244.0
offset_right = -344.0
offset_bottom = -52.0
scale = Vector2(1.25, 1.25)
texture_normal = ExtResource("2_fwgpi")
metadata/_edit_use_anchors_ = true

[node name="med-cup" type="TextureButton" parent="cupsize"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.075
anchor_top = -0.05
anchor_right = -0.075
anchor_bottom = -0.05
offset_left = -525.0
offset_top = -79.0
offset_right = -321.0
offset_bottom = 113.0
texture_normal = ExtResource("2_fwgpi")
metadata/_edit_use_anchors_ = true

[node name="small-cup" type="TextureButton" parent="cupsize"]
layout_mode = 0
offset_left = -493.0
offset_top = 47.0
offset_right = -289.0
offset_bottom = 239.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("2_fwgpi")
metadata/_edit_use_anchors_ = true

[node name="cup" type="TextureRect" parent="cupsize"]
layout_mode = 1
anchors_preset = -1
anchor_left = -10.25
anchor_top = -8.942
anchor_right = -10.25
anchor_bottom = -6.425
offset_left = 138.0
offset_top = 182.68
offset_right = 248.0
offset_bottom = 350.68
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="drink" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="milk" type="Node2D" parent="drink"]
script = ExtResource("3_wtyj4")

[node name="milkSprite" type="Sprite2D" parent="drink/milk"]
position = Vector2(378.625, -105.125)
scale = Vector2(1.20714, 1.25829)
texture = ExtResource("4_21wc3")

[node name="milkArea" type="Area2D" parent="drink/milk/milkSprite"]
position = Vector2(128.047, -132.372)
scale = Vector2(0.900931, 0.960653)

[node name="CollisionShape2D" type="CollisionShape2D" parent="drink/milk/milkSprite/milkArea"]
position = Vector2(-141.134, 139.645)
shape = SubResource("RectangleShape2D_457jg")

[node name="milk_animations" type="AnimatedSprite2D" parent="drink/milk"]
position = Vector2(370, -93)
scale = Vector2(1.04286, 1.09669)
sprite_frames = SubResource("SpriteFrames_bxd5m")
animation = &"milk"

[node name="tea" type="Button" parent="drink"]
layout_mode = 0
offset_left = -258.0
offset_top = -75.0
offset_right = -174.0
offset_bottom = -53.0
metadata/_edit_use_anchors_ = true

[node name="coffee" type="Button" parent="drink"]
layout_mode = 0
offset_left = -87.0
offset_top = -76.0
offset_right = -2.0
offset_bottom = -58.0
metadata/_edit_use_anchors_ = true

[node name="cup_spot" type="StaticBody2D" parent="drink" groups=["cup_drop", "droppable"]]
script = SubResource("GDScript_fnsfk")

[node name="cup_draggable" type="CollisionShape2D" parent="drink/cup_spot"]
position = Vector2(-35.5, 173)
shape = SubResource("RectangleShape2D_wx7pv")
one_way_collision_margin = 0.0

[node name="ColorRect" type="ColorRect" parent="drink/cup_spot"]
visible = false
offset_left = -112.0
offset_top = 81.0
offset_right = 13.0
offset_bottom = 263.0
color = Color(0.443137, 0.443137, 0.443137, 1)

[connection signal="pressed" from="Back" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="cupsize/large-cup" to="." method="_on_largecup_pressed"]
[connection signal="pressed" from="cupsize/large-cup" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="cupsize/med-cup" to="." method="_on_medcup_pressed"]
[connection signal="pressed" from="cupsize/small-cup" to="." method="_on_smallcup_pressed"]
[connection signal="body_entered" from="drink/milk/milkSprite/milkArea" to="drink/milk" method="_on_milk_area_body_entered"]
[connection signal="body_exited" from="drink/milk/milkSprite/milkArea" to="drink/milk" method="_on_milk_area_body_exited"]
[connection signal="input_event" from="drink/milk/milkSprite/milkArea" to="drink/milk" method="_on_milk_area_input_event"]
[connection signal="animation_finished" from="drink/milk/milk_animations" to="drink/milk" method="_on_milk_animations_animation_finished"]
[connection signal="animation_looped" from="drink/milk/milk_animations" to="drink/milk" method="_on_milk_animations_animation_looped"]
[connection signal="pressed" from="drink/tea" to="." method="_on_tea_pressed"]
[connection signal="pressed" from="drink/coffee" to="." method="_on_coffee_pressed"]
